--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         <p class="sub-title">
                             We are coming soon !!!
-							You can contact us on shaheel@viton.co.za
+							You can contact us on shaeel@viton.co.za
                         </p>
                     </div>
                 </li>
